--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express-validator": "^7.2.1",
     "multer": "^2.0.2",
     "ngrok": "^5.0.0-beta.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
